css/styles.css
html {
  box-sizing: border-box;
  min-width: 1250px;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  display: flex;
  flex-direction: column;
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
}

.header {
  background-color: #1F2937;
  color: #F9FAF8;
  display: flex;
  flex-direction: column;
  padding: 0 200px;
}
.header-logo {
  display: flex;
  align-items: center;
  font-size: 24px;
  font-weight: 700;
}

.header-logo img {
  margin: 0 5px;
  margin-left: -25px;
}

.nav-menu {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 25px 0;
  width: 100%;
}

.nav-links ul{
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  gap: 25px;
}

.nav-links a, .hero-body {
  color: #E5E7EB;
  font-size: 18px;
  text-decoration: none;
}

.hero-header {
  font-size: 48px;
  font-weight: 700;
}

.hero-box {
  display: flex;
  padding: 35px 0 70px 0;
  gap: 50px;
}

.hero-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hero-butt {
  background-color: #3882F6;
  border: none;
  color: #F9FAF8;
  font-size: 18px;
  font-weight: 700;
  padding: 6px;
  border-radius: 8px;
  margin-top: 10px;
}

.infogalheader {
  font-size: 36px;
  font-weight: 700;
  color: #1F2937;
  display: flex;
  justify-content: center;
  padding: 40px;
}

.infogalimg {
  width: 300px;
  height: 200px;
  border-radius: 15px;
  border: 4px solid #3b82f6;
}

.infogalcontainer {
  display: flex;
  justify-content: center;
  gap: 40px;
  margin-bottom: 100px;
}

.infogalnut{
  max-width: 300px;
}

.infogaltext {
  text-align: center;
  padding: 10px 0;
  color: #4b5563;
}

.qoutecontainer {
  background-color: #E5E7EB;
  font-size: 36px;
  color: #1F2937;
  padding: 50px 0px 70px;
}

.qoutemain{
  max-width: 1000px;
  margin: 0 auto;
}
.qoutebody {
  font-style: italic;
  font-weight: 300;
}

.qouteperson {
  font-weight: 700;
  text-align: right;
  padding-top: 20px;
}

.calltoaction{
  padding: 100px 400px;
  color: white;
}

.signupbox {
  display: flex;
  align-items: center;
  gap: 50px;
  padding: 40px 120px;
  background-color: #3882F6;
  border-radius: 15px;
  min-width: 800px;
}

.signuptitle {
  font-weight: bold;
}

.signupbutt {
  border-radius: 15px;
  background-color: #3882F6;
  border: 2px solid white;
  color: white;
  text-align: center;
  font-size: 18px;
  padding: 20px;
  width: 200px;
  transition: all 0.5s;
  cursor: pointer;
  margin: 5px;
}

.signupbutt span {
  cursor: pointer;
  display:inline-block;
  position: relative;
  transition: 0.5s;
}

.signupbutt:hover span{
  padding-right: 25px;
}

.signupbutt span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.signupbutt:hover span:after {
  opacity: 1;
  right: 0;
}

a,signupbutt {
  text-decoration: none;
  color: white;
}

.footer {
  background-color: #1F2937;
  color: white;
  text-align: center;
  padding: 20px;
}

